# viewer

./: CMakeLists.txt
imgsrc/: filesource.cpp  filesource.h  imgsource.h
main/: CMakeLists.txt  gcsmain.cpp  imgutils.cpp  imgutils.h  utxViewer
modules/: Findzbar.cmake
