cmake_minimum_required(VERSION 3.0.2)
project("UTX VIEWER")

set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules/")
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(zbar REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${zbar_INCLUDE_DIR})
add_subdirectory(main)
add_subdirectory(imgsrc)
